# api_gateway/api/handlers/models/models.go
@@ -37,3 +37,24 @@ type Error struct {
 	Error       error
 	Description string
 }
+
+type VerifyResponse struct {
+	Id           int64            `json:"id"`
+	FirstName    string            `json:"first_name"`
+	LastName     string            `json:"last_name"`
+	Email        string            `json:"email"`
+	Bio          string            `json:"bio"`
+	PhoneNumber  string            `json:"phone_number"`
+	JWT          string            `json:"jwt"`
+	RefreshToken string            `json:"refresh"`
+}
+
+
+type CustomerData struct {
+	FirstName string //`json:"first_name"`
+	LastName  string //`json:"last_name"`
+	Bio       string //`json:"username"`
+	Password  string //`json:"password"`
+	Email     string //`json:"email"`
+	Code      string
+}
